script to render video of tumor given center of mass

--- a/mypy.ini
+++ b/mypy.ini
@@ -2,6 +2,9 @@
 # File reference here - http://mypy.readthedocs.io/en/latest/config_file.html#config-file
 
 [mypy]
+python_version = 3.10
+warn_return_any = True
+warn_unused_configs = True
 warn_redundant_casts = True
 warn_unused_ignores = True
 
@@ -17,4 +20,15 @@ check_untyped_defs = True
 warn_return_any = True
 no_implicit_optional = True
 strict_optional = True
+ignore_missing_imports = True
+
+[mypy-scipy.*]
+warn_unused_ignores = False
+ignore_missing_imports = True
+
+[mypy-matplotlib.*]
+warn_unused_ignores = False
+ignore_missing_imports = True
+
+[mypy-ffmpeg.*]
 ignore_missing_imports = True
