--- a/train-configs/patch-based-trainer-1.yml
+++ b/train-configs/patch-based-trainer-1.yml
@@ -3,14 +3,15 @@ DATA:
   SOURCE: pickle-subjects
   PICKLE_SUBJECTS:
     folder_path: /home/bryan/expr/brain_tumor/2023-08-08/preprocess-subjects-crop-64-t1c
+  LAZY_LOAD_TRAIN: True
 PATCH_BASED_TRAINER:
   ENABLED: True
   TRANSFORMS_ENABLED: False
   WEIGHTED_SAMPLER:
     patch_size: [64, 64, 64]
   QUEUE:
-    samples_per_volume: 50
-    max_length: 2500
+    samples_per_volume: 25
+    max_length: 2000
 VAL_INFERENCE:
   MODE: CropLargestTumor
   CROP_LARGEST_TUMOR:
