--- a/train-configs/patch-based-trainer-t1c-crop-64.yml
+++ b/train-configs/patch-based-trainer-t1c-crop-64.yml
@@ -1,8 +1,8 @@
 DATA:
-  MODALITY: concat
+  MODALITY: t1c
   SOURCE: pickle-subjects
   PICKLE_SUBJECTS:
-    folder_path: /home/bryan/expr/brain_tumor/preprocess-subjects/resample-1.8-crop-64
+    folder_path: /home/bryan/expr/brain_tumor/preprocess-subjects/crop-64-t1c
   LAZY_LOAD_TRAIN: True
 PATCH_BASED_TRAINER:
   ENABLED: True
@@ -12,8 +12,8 @@ PATCH_BASED_TRAINER:
   QUEUE:
     # 491 * 5 = 2455
     samples_per_volume: 5
-    max_length: 1000
+    max_length: 2500
 VAL_INFERENCE:
   MODE: CropLargestTumor
   CROP_LARGEST_TUMOR:
-    crop_dim: [64, 64, 64]
+    crop_dim: [96, 96, 96]
