--- a/train-configs/patch-based-trainer-concat-crop-64.yml
+++ b/train-configs/patch-based-trainer-concat-crop-64.yml
@@ -2,7 +2,7 @@ DATA:
   MODALITY: concat
   SOURCE: pickle-subjects
   PICKLE_SUBJECTS:
-    folder_path: /home/bryan/expr/brain_tumor/preprocess-subjects/resample-1.8-crop-64
+    folder_path: /home/bryan/expr/brain_tumor/preprocess-subjects/crop-64
   LAZY_LOAD_TRAIN: True
 PATCH_BASED_TRAINER:
   ENABLED: True
@@ -16,4 +16,4 @@ PATCH_BASED_TRAINER:
 VAL_INFERENCE:
   MODE: CropLargestTumor
   CROP_LARGEST_TUMOR:
-    crop_dim: [64, 64, 64]
+    crop_dim: [96, 96, 96]
